--- a/gardenbar.html
+++ b/gardenbar.html
@@ -432,7 +432,7 @@
                             <div class="product-wrapper mb-25">
                                 <div class="product-img">
                                     <a href="#">
-                                        <img src="assets/images/lounge/Mirinda-Plastic.jpg" alt="">
+                                        <img src="assets/images/lounge/beta-malt.jpg" alt="">
                                     </a>
                                     <div class="product-action">
                                         <div class="pro-action-left">
@@ -484,7 +484,7 @@
                             <div class="product-wrapper mb-25">
                                 <div class="product-img">
                                     <a href="#">
-                                        <img src="assets/images/lounge/Pet-Coke 2.jpg" alt="">
+                                        <img src="assets/images/lounge/Coke-35cl.jpg" alt="">
                                     </a>
                                     <div class="product-action">
                                         <div class="pro-action-left">
@@ -501,7 +501,7 @@
                                         <a href="#">COKE 35CL</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;200</span>
+                                        <span>&#8358;300</span>
                                     </div>
                                 </div>
                             </div>
@@ -610,6 +610,7 @@
                                 </div>
                             </div>
                         </div>
+                       <!-- 
                         <div class="custom-col-5">
                             <div class="product-wrapper mb-25">
                                 <div class="product-img">
@@ -631,11 +632,12 @@
                                         <a href="#">50CL FANTA</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;200</span>
+                                        <span>&#8358;500</span>
                                     </div>
                                 </div>
                             </div>
                         </div>
+                        -->
                         <div class="custom-col-5">
                             <div class="product-wrapper mb-25">
                                 <div class="product-img">
@@ -718,7 +720,7 @@
                             <div class="product-wrapper mb-25">
                                 <div class="product-img">
                                     <a href="#">
-                                        <img src="assets/images/grillkitchen/Icon.jpg" alt="">
+                                        <img src="assets/images/lounge/plastic-pepsi.jpg" alt="">
                                     </a>
                                     <div class="product-action">
                                         <div class="pro-action-left">
@@ -868,7 +870,7 @@
                                         <a href="#">MALTINA</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;400</span>
+                                        <span>&#8358;500</span>
                                         <span class="product-price-old"></span>
                                     </div>
                                 </div>
@@ -895,7 +897,7 @@
                                         <a href="#">MALTA GUINNESS</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;400</span>
+                                        <span>&#8358;500</span>
                                         <span class="product-price-old"></span>
                                     </div>
                                 </div>
@@ -922,7 +924,7 @@
                                         <a href="#">FAYROUZ</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;300</span>
+                                        <span>&#8358;400</span>
                                         <span class="product-price-old"></span>
                                     </div>
                                 </div>
@@ -1014,7 +1016,7 @@
                             <div class="product-wrapper mb-25">
                                 <div class="product-img">
                                     <a href="#">
-                                        <img src="assets/images/grillkitchen/Icon.jpg" alt="">
+                                        <img src="assets/images/lounge/vsmartic.png" alt="">
                                     </a>
                                     <div class="product-action">
                                         <div class="pro-action-left">
