--- a/pool.html
+++ b/pool.html
@@ -495,7 +495,7 @@
                             <div class="product-wrapper mb-25">
                                 <div class="product-img">
                                     <a href="#product-details">
-                                        <img src="assets/images/lounge/maltina 3.jpg" alt="">
+                                        <img src="assets/images/lounge/beta-malt.jpg" alt="">
                                     </a>
                                     <div class="product-action">
                                         <div class="pro-action-left">
@@ -642,7 +642,7 @@
                                         <a href="#product-details">50CL FANTA</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;300</span>
+                                        <span>&#8358;500</span>
                                     </div>
                                 </div>
                             </div>
