--- a/pool.html
+++ b/pool.html
@@ -4240,7 +4240,7 @@
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-7">
                         <div class="copyright">
-                            <p>&copy; 2022 <strong> Princess Luxury </strong> designed by <a href="https://davidfrank96.github.io/portfolio/" target="_blank"><strong>Frankenstein services</strong></a></p>
+                            <p>&copy; 2022 <strong> Princess Luxury </strong> designed by <strong>Reeocity</strong></a></p>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-5">
