--- a/gardenbar.html
+++ b/gardenbar.html
@@ -4213,7 +4213,7 @@
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-7">
                         <div class="copyright">
-                             <p>&copy; 2022 <strong> Princess Luxury </strong> designed by <strong>Reeocity</strong></a></p>
+                             <p>&copy; 2022 <strong> Princess Luxury </strong> designed by <strong>Reeocity</strong></p>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-5">
