--- a/klubb/chanpange.html
+++ b/klubb/chanpange.html
@@ -360,7 +360,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-3 col-md-3 col-xs-6 paira-margin-top-3">
+                            <!-- <div class="col-sm-3 col-md-3 col-xs-6 paira-margin-top-3">
                                 <div class="product text-center">
                                     <div class="block-image position-rela">
                                         <a href="#">
@@ -374,11 +374,11 @@
                                         <!----   <div class="paira-wish-compare-con wish-compare-view-cart paira-margin-top-4">
                                         <a href="#paira-quick-view" class="paira-quick-view quick-view  btn color-scheme-2 font-size-18"><i class="fa fa-eye"></i></a>
                                         <a href="#" class="product-cart-con margin-left-5  btn color-scheme-2"><img src="images/cart-2.png" alt=""></a>
-                                    </div>-->
+                                    </div>-----<>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col-sm-3 col-md-3 col-xs-6 paira-margin-top-3">
+                            </div> -->
+                             <!---- <div class="col-sm-3 col-md-3 col-xs-6 paira-margin-top-3">
                                 <div class="product text-center">
                                     <div class="block-image position-rela">
                                         <a href="#">
@@ -392,10 +392,10 @@
                                         <!----     <div class="paira-wish-compare-con wish-compare-view-cart paira-margin-top-4">
                                         <a href="#paira-quick-view" class="paira-quick-view quick-view  btn color-scheme-2 font-size-18"><i class="fa fa-eye"></i></a>
                                         <a href="#" class="product-cart-con margin-left-5  btn color-scheme-2"><img src="images/cart-2.png" alt=""></a>
-                                    </div>-->
+                                    </div>----<>
                                     </div>
                                 </div>
-                            </div>
+                            </div>-->
                             <div class="col-sm-3 col-md-3 col-xs-6 paira-margin-top-3">
                                 <div class="product text-center">
                                     <div class="block-image position-rela">
@@ -414,7 +414,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-3 col-md-3 col-xs-6 paira-margin-top-3">
+                            <!---- <div class="col-sm-3 col-md-3 col-xs-6 paira-margin-top-3">
                                 <div class="product text-center">
                                     <div class="block-image position-rela">
                                         <a href="#">
@@ -428,10 +428,10 @@
                                         <!----      <div class="paira-wish-compare-con wish-compare-view-cart paira-margin-top-4">
                                         <a href="#paira-quick-view" class="paira-quick-view quick-view  btn color-scheme-2 font-size-18"><i class="fa fa-eye"></i></a>
                                         <a href="#" class="product-cart-con margin-left-5  btn color-scheme-2"><img src="images/cart-2.png" alt=""></a>
-                                    </div> -->
+                                    </div> ----<>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                             <div class="col-sm-3 col-md-3 col-xs-6 paira-margin-top-3">
                                 <div class="product text-center">
                                     <div class="block-image position-rela">
@@ -522,7 +522,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-3 col-md-3 col-xs-6 paira-margin-top-3">
+                            <!---- <div class="col-sm-3 col-md-3 col-xs-6 paira-margin-top-3">
                                 <div class="product text-center">
                                     <div class="block-image position-rela">
                                         <a href="#">
@@ -536,10 +536,10 @@
                                         <!----   <div class="paira-wish-compare-con wish-compare-view-cart paira-margin-top-4">
                                         <a href="#paira-quick-view" class="paira-quick-view quick-view  btn color-scheme-2 font-size-18"><i class="fa fa-eye"></i></a>
                                         <a href="#" class="product-cart-con margin-left-5  btn color-scheme-2"><img src="images/cart-2.png" alt=""></a>
-                                    </div>-->
+                                    </div>---<>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                             <div class="col-sm-3 col-md-3 col-xs-6 paira-margin-top-3">
                                 <div class="product text-center">
                                     <div class="block-image position-rela">
@@ -558,7 +558,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-3 col-md-3 col-xs-6 paira-margin-top-3">
+                           <!----  <div class="col-sm-3 col-md-3 col-xs-6 paira-margin-top-3">
                                 <div class="product text-center">
                                     <div class="block-image position-rela">
                                         <a href="#">
@@ -572,10 +572,10 @@
                                         <!---- <div class="paira-wish-compare-con wish-compare-view-cart paira-margin-top-4">
                                         <a href="#paira-quick-view" class="paira-quick-view quick-view  btn color-scheme-2 font-size-18"><i class="fa fa-eye"></i></a>
                                         <a href="#" class="product-cart-con margin-left-5  btn color-scheme-2"><img src="images/cart-2.png" alt=""></a>
-                                    </div>-->
+                                    </div>---<>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                             <div class="col-sm-3 col-md-3 col-xs-6 paira-margin-top-3">
                                 <div class="product text-center">
                                     <div class="block-image position-rela">
@@ -609,7 +609,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-3 col-md-3 col-xs-6 paira-margin-top-3">
+                            <!----  <div class="col-sm-3 col-md-3 col-xs-6 paira-margin-top-3">
                                 <div class="product text-center">
                                     <div class="block-image position-rela">
                                         <a href="#">
@@ -623,10 +623,10 @@
                                         <!---- <div class="paira-wish-compare-con wish-compare-view-cart paira-margin-top-4">
                                         <a href="#paira-quick-view" class="paira-quick-view quick-view  btn color-scheme-2 font-size-18"><i class="fa fa-eye"></i></a>
                                         <a href="#" class="product-cart-con margin-left-5  btn color-scheme-2"><img src="images/cart-2.png" alt=""></a>
-                                    </div>-->
+                                    </div>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                             
                         <div class="col-md-12 col-sm-12 col-xs-12 text-capitalize text-center paira-margin-top-3">
                             <div class="see-more">
