--- a/klubb/chanpange.html
+++ b/klubb/chanpange.html
@@ -306,7 +306,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-3 col-md-3 col-xs-6 paira-margin-top-1">
+                          <!----  <div class="col-sm-3 col-md-3 col-xs-6 paira-margin-top-1">
                                 <div class="product text-center">
                                     <div class="block-image position-rela">
                                         <a href="#">
@@ -320,10 +320,10 @@
                                         <!---- <div class="paira-wish-compare-con wish-compare-view-cart paira-margin-top-4">
                                         <a href="#paira-quick-view" class="paira-quick-view quick-view  btn color-scheme-2 font-size-18"><i class="fa fa-eye"></i></a>
                                         <a href="#" class="product-cart-con margin-left-5  btn color-scheme-2"><img src="images/cart-2.png" alt=""></a>
-                                    </div>-->
+                                    </div>---<>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                             <div class="col-sm-3 col-md-3 col-xs-6 paira-margin-top-1">
                                 <div class="product text-center">
                                     <div class="block-image position-rela">
