--- a/klubb/softs.html
+++ b/klubb/softs.html
@@ -369,7 +369,7 @@
                                     <div class="block-image position-rela">
                                         <a href="#">
                                             <div class="background-overlay"></div>
-                                            <img src="..assets/images/lounge/Aquafina 2.jpg" alt="" class="img-responsive">
+                                            <img src="Aquafina 2.jpg" alt="" class="img-responsive">
                                         </a>
                                     </div>
                                     <h1 class="font-size-16 paira-margin-top-4 margin-bottom-10"><a href="#">AQUAFINA WATER</a></h1>
