--- a/gardenbar.html
+++ b/gardenbar.html
@@ -249,7 +249,7 @@
                             <div class="product-wrapper mb-25">
                                 <div class="product-img">
                                     <a href="#">
-                                        <img src="assets/images/lounge/Chivita-100% 2.jpg" alt="">
+                                        <img src="assets/images/lounge/Chivita-100%.jpg" alt="">
                                     </a>
                                     <div class="product-action">
                                         <div class="pro-action-left">
