--- a/lounge.html
+++ b/lounge.html
@@ -596,7 +596,7 @@
                                         <a href="#product-details">PET COKE 50CL</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;500</span>
+                                        <span>&#8358;1,000</span>
                                         <span class="product-price-old"></span>
                                     </div>
                                 </div>
@@ -623,13 +623,13 @@
                                         <a href="#product-details">PET SPRITE</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;500</span>
+                                        <span>&#8358;1,000</span>
                                         <span class="product-price-old"></span>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="custom-col-5">
+                       <!--  <div class="custom-col-5">
                             <div class="product-wrapper mb-25">
                                 <div class="product-img">
                                     <a href="#product-details">
@@ -709,6 +709,7 @@
                                 </div>
                             </div>
                         </div>
+			    -->
                         <div class="custom-col-5">
                             <div class="product-wrapper mb-25">
                                 <div class="product-img">
@@ -757,13 +758,13 @@
                                         <a href="#product-details">VISMARTIC</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;1,200</span>
+                                        <span>&#8358;1,500</span>
                                         <span class="product-price-old"></span>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="custom-col-5">
+                     <!--    <div class="custom-col-5">
                             <div class="product-wrapper mb-25">
                                 <div class="product-img">
                                     <a href="#product-details">
@@ -790,6 +791,7 @@
                                 </div>
                             </div>
                         </div>
+			    -->
 
                         <div class="custom-col-5">
                             <div class="product-wrapper mb-25">
@@ -812,13 +814,13 @@
                                         <a href="#product-details">MONSTER ENERGY DRINKS</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;2,000</span>
+                                        <span>&#8358;3,000</span>
                                         <span class="product-price-old"></span>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="custom-col-5">
+                      <!--   <div class="custom-col-5">
                             <div class="product-wrapper mb-25">
                                 <div class="product-img">
                                     <a href="#product-details">
@@ -845,6 +847,7 @@
                                 </div>
                             </div>
                         </div>
+			    -->
                         <div class="custom-col-5">
                             <div class="product-wrapper mb-25">
                                 <div class="product-img">
@@ -866,7 +869,7 @@
                                         <a href="#product-details">AMBER ENERGY DRINK</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;500</span>
+                                        <span>&#8358;3,000</span>
                                         <span class="product-price-old"></span>
                                     </div>
                                 </div>
@@ -893,7 +896,7 @@
                                         <a href="#product-details">POWER HORSE 350ML</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;0,000</span>
+                                        <span>&#8358;3,000</span>
                                         <span class="product-price-old"></span>
                                     </div>
                                 </div>
@@ -1006,7 +1009,7 @@
                                         <a href="#product-details">DON SIMON BOTTLE </a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;8,000</span>
+                                        <span>&#8358;10,000</span>
                                     </div>
                                 </div>
                             </div>
@@ -1032,7 +1035,7 @@
                                         <a href="#product-details">CARLO ROSSI ROSE</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;8,000</span>
+                                        <span>&#8358;10,000</span>
                                         <span class="product-price-old"></span>
                                     </div>
                                 </div>
@@ -1059,7 +1062,7 @@
                                         <a href="#product-details">CARLO ROSSI RED </a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;8,000</span>
+                                        <span>&#8358;10,000</span>
                                     </div>
                                 </div>
                             </div>
@@ -1085,7 +1088,7 @@
                                         <a href="#product-details">BARON ROMERO</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;6,000</span>
+                                        <span>&#8358;10,000</span>
                                         <span class="product-price-old"> </span>
                                     </div>
                                 </div>
@@ -1112,7 +1115,7 @@
                                         <a href="#product-details">BARON DE VALL</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;8,000</span>
+                                        <span>&#8358;10,000</span>
                                     </div>
                                 </div>
                             </div>
@@ -1138,7 +1141,7 @@
                                         <a href="#product-details">CARLOROSSI ICE PEACH</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;8,000</span>
+                                        <span>&#8358;10,000</span>
                                         <span class="product-price-old"> </span>
                                     </div>
                                 </div>
@@ -1165,7 +1168,7 @@
                                         <a href="#product-details">FOUR COUSINS SWEET WHITE</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;7,000</span>
+                                        <span>&#8358;10,000</span>
                                     </div>
                                 </div>
                             </div>
@@ -1186,7 +1189,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="product-content">
+                               <!--  <div class="product-content">
                                     <h4>
                                         <a href="#product-details">TIA MARIA </a>
                                     </h4>
@@ -1223,6 +1226,7 @@
                                 </div>
                             </div>
                         </div>
+				    -->
                         <div class="custom-col-5">
                             <div class="product-wrapper mb-25">
                                 <div class="product-img">
@@ -1271,7 +1275,7 @@
                                         <a href="#product-details">CARLOROSSI SWEET RED</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;8,000</span>
+                                        <span>&#8358;10,000</span>
                                     </div>
                                 </div>
                             </div>
@@ -1297,7 +1301,7 @@
                                         <a href="#product-details">CARLO ROSSI WHITE </a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;8,000</span>
+                                        <span>&#8358;10,000</span>
                                         <span class="product-price-old"></span>
                                     </div>
                                 </div>
@@ -1324,7 +1328,7 @@
                                         <a href="#product-details">FOUR COUSINS SWEET ROSE </a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;7,000</span>
+                                        <span>&#8358;10,000</span>
                                     </div>
                                 </div>
                             </div>
@@ -1350,7 +1354,7 @@
                                         <a href="#product-details">FOUR COUSINS SWEET RED</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;7,000</span>
+                                        <span>&#8358;10,000</span>
                                     </div>
                                 </div>
                             </div>
@@ -1381,7 +1385,7 @@
                                         <a href="#product-details">BLACK LABEL BIG </a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;25,000</span>
+                                        <span>&#8358;30,000</span>
                                         <span class="product-price-old"></span>
                                     </div>
                                 </div>
@@ -1408,7 +1412,7 @@
                                         <a href="#product-details">JAMESON BLACK BARREL</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;30,000</span>
+                                        <span>&#8358;40,000</span>
                                     </div>
                                 </div>
                             </div>
@@ -1434,7 +1438,7 @@
                                         <a href="#product-details">RED LABEL BIG </a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;12,000</span>
+                                        <span>&#8358;14,000</span>
                                         <span class="product-price-old"></span>
                                     </div>
                                 </div>
@@ -1514,7 +1518,7 @@
                                         <a href="#product-details">JAMESON</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;25,000</span>
+                                        <span>&#8358;30,000</span>
                                     </div>
                                 </div>
                             </div>
@@ -1567,7 +1571,7 @@
                                         <a href="#product-details">CIROC VODKA </a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;35,000</span>
+                                        <span>&#8358;45,000</span>
                                     </div>
                                 </div>
                             </div>
@@ -1620,7 +1624,7 @@
                                         <a href="#product-details">CIROC FLAVOUR</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;35,000</span>
+                                        <span>&#8358;50,000</span>
                                     </div>
                                 </div>
                             </div>
@@ -1646,7 +1650,7 @@
                                         <a href="#product-details">VODKA SHOT</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;500</span>
+                                        <span>&#8358;1,000</span>
                                     </div>
                                 </div>
                             </div>
@@ -1750,7 +1754,7 @@
                                         <a href="#product-details">SMIRNOFF VODKA MEDIUM</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;6,000</span>
+                                        <span>&#8358;7q,000</span>
                                     </div>
                                 </div>
                             </div>
@@ -1803,7 +1807,7 @@
                                         <a href="#product-details">CIROC BLUE</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;35,000</span>
+                                        <span>&#8358;45,000</span>
                                     </div>
                                 </div>
                             </div>
@@ -1907,7 +1911,7 @@
                                         <a href="#product-details">REMMY MARTINS V S O P</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;45,000</span>
+                                        <span>&#8358;60,000</span>
                                     </div>
                                 </div>
                             </div>
@@ -1933,7 +1937,7 @@
                                         <a href="#product-details">HENNESSEY VS</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;45,000</span>
+                                        <span>&#8358;55,000</span>
                                     </div>
                                 </div>
                             </div>
@@ -1959,7 +1963,7 @@
                                         <a href="#product-details">MARTEL VSOP</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;40,000</span>
+                                        <span>&#8358;55,000</span>
                                     </div>
                                 </div>
                             </div>
@@ -1985,7 +1989,7 @@
                                         <a href="#product-details">JACK DANIEL 70CL</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;25,000</span>
+                                        <span>&#8358;30,000</span>
                                     </div>
                                 </div>
                             </div>
@@ -2037,7 +2041,7 @@
                                         <a href="#product-details">HENNESSEY V S O P</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;65,000</span>
+                                        <span>&#8358;85,000</span>
                                     </div>
                                 </div>
                             </div>
