--- a/resturant.html
+++ b/resturant.html
@@ -286,7 +286,7 @@
                                         <div class="product-details-img">
 
                                             <img src="assets/images/grillkitchen/Icon.jpg" alt="">
-                                            <span>New</span>
+                                            
                                         </div>
                                         <!-------And ends here-->
                                     </a>
@@ -306,7 +306,7 @@
                                     </h4>
                                     <div class="product-price-wrapper">
                                         <span>&#8358;3,000</span>
-                                        <span class="product-price-old">Avalaible</span>
+                                      <!--  <span class="product-price-old">Avalaible</span> -->
                                     </div>
                                 </div>
                             </div>
@@ -333,7 +333,7 @@
                                         <a href="#product-details">CHI VITA 100 PERCENT </a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;1,200</span>
+                                        <span>&#8358;1,500</span>
                                     </div>
                                 </div>
                             </div>
@@ -359,7 +359,7 @@
                                         <a href="#product-details">CHI VITA ACTIVE </a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;1,200</span>
+                                        <span>&#8358;1,500</span>
                                         <span class="product-price-old"></span>
                                     </div>
                                 </div>
@@ -386,7 +386,7 @@
                                         <a href="#product-details">CHI EXOTIC </a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;1,200</span>
+                                        <span>&#8358;1,500</span>
                                     </div>
                                 </div>
                             </div>
@@ -438,7 +438,7 @@
                                         <a href="#product-details">5 ALIVE PULPY</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;800</span>
+                                        <span>&#8358;1,500</span>
                                     </div>
                                 </div>
                             </div>
@@ -461,10 +461,10 @@
                                 </div>
                                 <div class="product-content">
                                     <h4>
-                                        <a href="#product-details">PEVA WATER </a>
+                                        <a href="#product-details">EVA WATER </a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;200</span>
+                                        <span>&#8358;300</span>
                                         <span class="product-price-old"></span>
                                     </div>
                                 </div>
@@ -491,7 +491,7 @@
                                         <a href="#product-details">AQUAFINA WATER</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;200</span>
+                                        <span>&#8358;300</span>
                                     </div>
                                 </div>
                             </div>
@@ -517,7 +517,7 @@
                                         <a href="#product-details">SHABRAM TABLE WATER</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;200</span>
+                                        <span>&#8358;300</span>
                                         <span class="product-price-old"></span>
                                     </div>
                                 </div>
