--- a/lounge.html
+++ b/lounge.html
@@ -256,7 +256,7 @@
                                         <div class="product-details-img">
 
                                             <img src="assets/images/lounge/Cranberry 2.jpg" alt="">
-                                            <span>New</span>
+                                          
                                         </div>
                                         <!-------And ends here-->
                                     </a>
@@ -275,8 +275,8 @@
                                         <a href="#"><b>CRANBERRY</b> </a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;3,500</span>
-                                        <span class="product-price-old">Avalaible</span>
+                                        <span>&#8358;5,000</span>
+                                       <!-- <span class="product-price-old">Avalaible</span> -->
                                     </div>
                                 </div>
                             </div>
@@ -303,7 +303,7 @@
                                         <a href="#product-details">CHI VITA 100 PERCENT </a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;1,500</span>
+                                        <span>&#8358;2,000</span>
                                     </div>
                                 </div>
                             </div>
@@ -329,7 +329,7 @@
                                         <a href="#product-details">CHI VITA ACTIVE </a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;1,500</span>
+                                        <span>&#8358;2,000</span>
                                         <span class="product-price-old"></span>
                                     </div>
                                 </div>
@@ -356,7 +356,7 @@
                                         <a href="#product-details">CHI EXOTIC </a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;1,500</span>
+                                        <span>&#8358;2,000</span>
                                     </div>
                                 </div>
                             </div>
@@ -379,10 +379,10 @@
                                 </div>
                                 <div class="product-content">
                                     <h4>
-                                        <a href="#product-details">PEVA WATER </a>
+                                        <a href="#product-details">EVA WATER </a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;200</span>
+                                        <span>&#8358;1,000</span>
                                         <span class="product-price-old"></span>
                                     </div>
                                 </div>
@@ -409,7 +409,7 @@
                                         <a href="#product-details">AQUAFINA WATER</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;200</span>
+                                        <span>&#8358;1,000</span>
                                     </div>
                                 </div>
                             </div>
@@ -435,7 +435,7 @@
                                         <a href="#product-details">SHABRAM TABLE WATER</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;200</span>
+                                        <span>&#8358;1,000</span>
                                         <span class="product-price-old"></span>
                                     </div>
                                 </div>
@@ -462,7 +462,7 @@
                                         <a href="#product-details">CHOCOLATE </a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;200</span>
+                                        <span>&#8358;5,000</span>
                                     </div>
                                 </div>
                             </div>
@@ -488,7 +488,7 @@
                                         <a href="#product-details">ZERO ORIJIN CAN</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;500</span>
+                                        <span>&#8358;1,000</span>
                                         <span class="product-price-old"></span>
                                     </div>
                                 </div>
@@ -757,7 +757,7 @@
                                         <a href="#product-details">VISMARTIC</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;1,200</span>
+                                        <span>&#8358;1,500</span>
                                         <span class="product-price-old"></span>
                                     </div>
                                 </div>
@@ -812,7 +812,7 @@
                                         <a href="#product-details">MONSTER ENERGY DRINKS</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;2,000</span>
+                                        <span>&#8358;3,000</span>
                                         <span class="product-price-old"></span>
                                     </div>
                                 </div>
@@ -839,7 +839,7 @@
                                         <a href="#product-details">POWER HORSE 50CL</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;2,000</span>
+                                        <span>&#8358;3,000</span>
                                         <span class="product-price-old"></span>
                                     </div>
                                 </div>
@@ -1032,7 +1032,7 @@
                                         <a href="#product-details">CARLO ROSSI ROSE</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;8,000</span>
+                                        <span>&#8358;10,000</span>
                                         <span class="product-price-old"></span>
                                     </div>
                                 </div>
@@ -1059,7 +1059,7 @@
                                         <a href="#product-details">CARLO ROSSI RED </a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;8,000</span>
+                                        <span>&#8358;10,000</span>
                                     </div>
                                 </div>
                             </div>
