--- a/pool.html
+++ b/pool.html
@@ -272,7 +272,7 @@
                                         <a href="#" onclick="console.log('close me')"><b>CRANBERRY</b> </a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;3,500</span>
+                                        <span>&#8358;4,000</span>
                                         <span class="product-price-old">Avalaible</span>
                                     </div>
                                 </div>
@@ -332,7 +332,7 @@
                                         <a href="#product-details">CHI VITA 100 PERCENT </a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;1,500</span>
+                                        <span>&#8358;2,000</span>
                                         <span class="product-price-old"></span>
                                     </div>
                                 </div>
@@ -364,7 +364,7 @@
                                         <a href="#product-details">CHI VITA ACTIVE </a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;1,500</span>
+                                        <span>&#8358;2,000</span>
                                         <span class="product-price-old"></span>
                                     </div>
                                 </div>
@@ -391,7 +391,33 @@
                                         <a href="#product-details">CHI EXOTIC </a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;1,500</span>
+                                        <span>&#8358;2,000</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                         <div class="custom-col-5">
+                            <div class="product-wrapper mb-25">
+                                <div class="product-img">
+                                    <a href="#product-details">
+                                        <img src="assets/images/lounge/peak.png" alt="">
+                                    </a>
+                                    <div class="product-action">
+                                        <div class="pro-action-left">
+                                            <a title="Add Tto Cart" href="#"><i class="ion-android-cart"></i> Add Tto Cart</a>
+                                        </div>
+                                        <div class="pro-action-right">
+                                            <a title="Wishlist" href="#wishlist"><i class="ion-ios-heart-outline"></i></a>
+                                            <a title="Quick View" data-bs-toggle="modal" data-bs-target="#exampleModal" href="#"><i class="ion-android-open"></i></a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="product-content">
+                                    <h4>
+                                        <a href="#product-details">PEAK YOUGHURT </a>
+                                    </h4>
+                                    <div class="product-price-wrapper">
+                                        <span>&#8358;2,000</span>
                                     </div>
                                 </div>
                             </div>
@@ -2030,7 +2056,7 @@
                                         <a href="#product-details">SKY VODKA</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;9,000</span>
+                                        <span>&#8358;12,000</span>
                                     </div>
                                 </div>
                             </div>
@@ -2434,7 +2460,7 @@
                                         <a href="#product-details">STAR</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;700</span>
+                                        <span>&#8358;1,000</span>
                                     </div>
                                 </div>
                             </div>
@@ -2487,7 +2513,7 @@
                                         <a href="#product-details">SMALL STOUT </a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;800</span>
+                                        <span>&#8358;1,00</span>
                                     </div>
                                 </div>
                             </div>
@@ -2830,7 +2856,7 @@
                                         <a href="#product-details">HEINEKEN</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;1,200</span>
+                                        <span>&#8358;1,500</span>
                                     </div>
                                 </div>
                             </div>
@@ -2856,7 +2882,7 @@
                                         <a href="#product-details">GOLDBERG</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;800</span>
+                                        <span>&#8358;1,000</span>
                                         <span class="product-price-old"></span>
                                     </div>
                                 </div>
@@ -2883,7 +2909,7 @@
                                         <a href="#product-details">ORIJIN BIG</a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;800</span>
+                                        <span>&#8358;1,000</span>
                                     </div>
                                 </div>
                             </div>
@@ -2909,7 +2935,7 @@
                                         <a href="#product-details">BIG STOUT </a>
                                     </h4>
                                     <div class="product-price-wrapper">
-                                        <span>&#8358;1,500</span>
+                                        <span>&#8358;1,700</span>
                                         <span class="product-price-old"> </span>
                                     </div>
                                 </div>
