--- a/pool.html
+++ b/pool.html
@@ -282,7 +282,7 @@
                         <!-- Implement reusabable logic for product cards -->
                         <!-- <div id="product-card" class="custom-col-5">Product Card</div> -->
 
-                      <!--  <div class="custom-col-5" onclick="console.log('ll')">
+                       <div class="custom-col-5" onclick="console.log('ll')">
                             <div class="product-wrapper mb-25" onclick="console.log('ll')">
                                 <div class="product-img">
                                     <a href="#product-details" onclick="console.log('close me')">
@@ -298,7 +298,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="product-content">
+                                 <!--<div class="product-content">
                                     <h4>
                                         <a href="#product-details">CHI VITA 100 PERCENT </a>
                                     </h4>
